# fide-google-efficient-chess-ai-challenge

./: chess.ipynb  main.py
engine/: CMakeLists.txt  board.cpp  chess.cpp  engine.cpp  engine.h  main.cpp  move.cpp  movegen.cpp  movepick.cpp
